added new features: audio and pdf upload
